--- a/css/style.css
+++ b/css/style.css
@@ -71,5 +71,52 @@ footer {
 	background-repeat: no-repeat;
   	background-size: 100% 100%;
     background-position: right;
+
+}
+.main-servicios{
+  background-image: url(https://media.istockphoto.com/photos/ultrasound-examination-in-doctors-office-picture-id614051978?k=20&m=614051978&s=612x612&w=0&h=c4CIqN82F0itjV-bBI-zOb1KMOyQ6s597S9YOxbBgQ8=);
+  background-position: center	;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  text-align: -webkit-right
+}
+
+
+
+
+
+
+
+
+/* DESKTOP*/
+@media (max-width: 1200px) { 
+body {
+	background-color: red;
+} 
     
+}
+/*medium*/
+@media (max-width: 992px) { 
+body{
+	background-color: yellow;
+	
+}	
+.video{
+	width: 50%;
+} 
+}
+/*mobile*/
+@media (max-width: 551px) { 
+	body {
+		background-color: green;
+	}
+header {
+	font-size: small;
+
+}
+footer {
+	font-size: small;
+}
+}
+ 
 }
