--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -29,22 +29,22 @@
   		<div class="collapse navbar-collapse" id="navbarNav">
 		    <ul class="navbar-nav ">
 		      <li class="nav-item active">
-		        <a class="nav-link" href="../index.html">Inicio <span class="sr-only"></span></a>
+		        <a href="../index.html">Inicio <span class="sr-only"></span></a>
 		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#">Nosotros</a>
+		      <li>
+		        <a href="#">Nosotros</a>
 		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#">Servicios</a>
+		      <li>
+		        <a href="servicios.html">Servicios</a>
 		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#">Turnos</a>
+		      <li>
+		        <a href="#">Turnos</a>
 		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#">Busca tus resultados</a>
+		      <li>
+		        <a href="#">Busca tus resultados</a>
 		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#">Contacto</a>
+		      <li>
+		        <a href="#">Contacto</a>
 		      </li>
 		      
 		    </ul>
@@ -117,7 +117,7 @@ MP 11570</p>
 		        <a class="nav-link" href="#">Nosotros</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">Servicios</a>
+		        <a class="nav-link" href="servicios.html">Servicios</a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link" href="#">Turnos</a>
