--- a/views/servicios.html
+++ b/views/servicios.html
@@ -4,22 +4,23 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>CONSULTORIO</title>
-		<link rel="icon" href="assets/img/logoimagenes.jpeg">
+		<link rel="icon" href="../assets/img/logoimagenes.jpeg">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 	  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	  <link rel="stylesheet" href="css/normalize.css">
+	  <link rel="stylesheet" href="../css/normalize.css">
 	  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet"  href="css/style.css">
+    <link rel="stylesheet"  href="../css/style.css">
 </head>
 <body>
-	<header class="container-fluid">
+	<!-- logo y nav -->
+	<header class="container-fluid"> 
 		<div class="row">
 		<div class="col-lg-12 col-12">
 	<nav class="navbar navbar-expand-lg navbar-light">
 		
-  <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt="logo de la empresa" width="100%"></a>
+  <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo.png" alt="logo de la empresa" width="100%"></a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -28,22 +29,22 @@
   		<div class="collapse navbar-collapse" id="navbarNav">
 		    <ul class="navbar-nav ">
 		      <li class="nav-item active">
-		        <a href="#">Inicio <span class="sr-only"></span></a>
+		        <a class="nav-link" href="../index.html">Inicio <span class="sr-only"></span></a>
 		      </li>
-		      <li>
-		        <a href="views/nosotros.html">Nosotros</a>
+		      <li class="nav-item">
+		        <a class="nav-link" href="nosotros.html">Nosotros</a>
 		      </li>
-		      <li>
-		        <a href="views/servicios.html">Servicios</a>
+		      <li class="nav-item">
+		        <a class="nav-link" href="#">Servicios</a>
 		      </li>
-		      <li>
-		        <a href="#">Turnos</a>
+		      <li class="nav-item">
+		        <a class="nav-link" href="#">Turnos</a>
 		      </li>
-		      <li>
-		        <a href="#">Busca tus resultados</a>
+		      <li class="nav-item">
+		        <a class="nav-link" href="#">Busca tus resultados</a>
 		      </li>
-		      <li>
-		        <a href="#">Contacto</a>
+		      <li class="nav-item">
+		        <a class="nav-link" href="#">Contacto</a>
 		      </li>
 		      
 		    </ul>
@@ -53,39 +54,51 @@
 </div>
 </div>
 </header>
-	
-<!-- agregar bg img -->
-<main class="container-fluid main-principal">
-	<div class="row">
-		<article class="col-lg-12 col-12">
-	   			<h1>Consultorio de Ecografías </h1>
-	
-			    <P>Victoria Rovella Battocchia Médica Esp. en diagnóstico por imágenes</P>
-		</article>
-		</div>
-</main>
-<!-- consultorio img -->
 <div class="container-fluid">
-	<div class="row text-color">
-	
-		<div class="col-lg-12 col-12 ">
-					<h2>Nuestro consultorio</h2>
-		</div>
-		</div>
-		<div class="row align-items-center">
-		<div class="col-lg-6 col-12 ">		
-					<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo perspiciatis, quos quod hic soluta veniam inventore tempora tenetur saepe sequi cupiditate, rem laboriosam, error. Dolorum non eligendi sit quam perferendis?</p>
-		</div>				
+	<div class="row align-items-center">
+		<div class="col-lg-8 col-12">
+			<div class="row">
+	<main class="main-servicios ">
+		<div class="col-lg-6 col-6">
+		<div class="col-lg-6 col-6">
 			
-	<div class="col-lg-6 col-12">		
-					<video class="video" src="assets/video/consultorio.mp4"autoplay	muted loop width="80%"></video>
+	   			<h1>Nuestros servicios</h1>
+	        
+			    <P>En Imágenes, queremos brindarle una excelente calidad de atención,
+			 aplicando nuestros conocimientos y equipamientos de ultima tecnologia
+			  logrando asi los mejores resultados.</P>
+		</div>
+		</div>
+	</main>
 	</div>
+	</div>
+	<div class="col-lg-4 col-12">
+	         <ul>
+	         	 <li>ECOGRAFIA GENERAL </li>
+		         <li>ECOGRAFIA GINECOLÓGICA Y MAMARIA </li>
+		     	 <li>ECOGRAFIA FETAL Y DOPPLER FETO-PLACENTARIO </li>
+		     	 <li>ECOGRAFIA DE PARTES BLANDAS </li>
+		     	 <li>ECOGRAFIA PEDIATRICA </li>
+		     	 <li>DOPPLER VASCULAR </li>
+	         </ul>
+	</div>         
+	         
+  </div>
+</div>	         
+	<section class="container-fluid">
+		<div class="row">
+			<div class="col-lg-12 col-12">
+		<h2>ecografías de urgencia </h2>
+		  </div>
+		  <div class="col-lg-12 col-12">
+		<p>días sabados y domingos de 9 a 13 hs</p>
+			</div>
 		</div>
-		</div>
-		<footer class="container-fluid">
+	</section>
+<footer class="container-fluid">
 			<div class="row align-items-center">
 			<div class="col-lg-12 col-12">
-			<a href="#"><img src="assets/img/logo.png" alt="logo de la empresa" width="50%"> </a>
+			<a href="../index.html"><img src="../assets/img/logo.png" alt="logo de la empresa" width="50%"> </a>
 				
 		</div>
 		</div>
@@ -102,13 +115,13 @@
   		<div class="collapse navbar-collapse" id="navbarNav">
 		    <ul class="navbar-nav ">
 		      <li class="nav-item active">
-		        <a class="nav-link text-color" href="#">Inicio <span class="sr-only"></span></a>
+		        <a class="nav-link" href="../index.html">Inicio <span class="sr-only"></span></a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="views/nosotros.html">Nosotros</a>
+		        <a class="nav-link" href="nosotros.html">Nosotros</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="views/servicios.html">Servicios</a>
+		        <a class="nav-link" href="#">Servicios</a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link" href="#">Turnos</a>
@@ -142,8 +155,8 @@
 
 </div>
 		</footer>
-		  <script src="js/wow.min.js"></script>
+		 <script src="js/wow.min.js"></script>
       <script>new WOW().init();</script>
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>	
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
