--- a/views/resultados.html
+++ b/views/resultados.html
@@ -35,13 +35,13 @@
 		        <a class="nav-link" href="nosotros.html">Nosotros</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">Servicios</a>
+		        <a class="nav-link" href="servicios.html">Servicios</a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link" href="turnos.html">Turnos</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="resultados.html">Busca tus resultados</a>
+		        <a class="nav-link" href="#">Busca tus resultados</a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link" href="contacto.html">Contacto</a>
@@ -54,47 +54,30 @@
 </div>
 </div>
 </header>
-<div class="container-fluid">
-	<div class="row align-items-center">
-		<div class="col-lg-8 col-12">
-			<div class="row">
-	<main class="main-servicios ">
-		<div class="col-lg-6 col-6">
-		<div class="col-lg-6 col-6">
-			
-	   			<h1>Nuestros servicios</h1>
-	        
-			    <P>En Imágenes, queremos brindarle una excelente calidad de atención,
-			 aplicando nuestros conocimientos y equipamientos de ultima tecnologia
-			  logrando asi los mejores resultados.</P>
-		</div>
-		</div>
-	</main>
-	</div>
-	</div>
-	<div class="col-lg-4 col-12">
-	         <ul>
-	         	 <li>ECOGRAFIA GENERAL </li>
-		         <li>ECOGRAFIA GINECOLÓGICA Y MAMARIA </li>
-		     	 <li>ECOGRAFIA FETAL Y DOPPLER FETO-PLACENTARIO </li>
-		     	 <li>ECOGRAFIA DE PARTES BLANDAS </li>
-		     	 <li>ECOGRAFIA PEDIATRICA </li>
-		     	 <li>DOPPLER VASCULAR </li>
-	         </ul>
-	</div>         
-	         
+<main class="container-fluid resultados">
+	<div class="row">
+		<div class="col-lg-12 col-12">
+
+				
+					<form action="#">  
+						             <h1>Busca tu resultado</h1>
+						 <input type="number" name="Numero de estudio" placeholder="Nº de estudio">
+				    	 <input  class="formulario" type="number" name="DNI" placeholder="DNI paciente">
+					<div>	
+						 <input  type="submit" value="BUSCAR">
+			        </div>
+          </form>
+    </div>      
   </div>
-</div>	         
-	<section class="container-fluid">
-		<div class="row">
-			<div class="col-lg-12 col-12">
-		<h2>ecografías de urgencia </h2>
-		  </div>
-		  <div class="col-lg-12 col-12">
-		<p>días sabados y domingos de 9 a 13 hs</p>
-			</div>
-		</div>
-	</section>
+	</main>
+
+
+
+
+
+
+
+
 <footer class="container-fluid">
 			<div class="row align-items-center">
 			<div class="col-lg-12 col-12">
@@ -121,13 +104,13 @@
 		        <a class="nav-link" href="nosotros.html">Nosotros</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">Servicios</a>
+		        <a class="nav-link" href="servicios.html">Servicios</a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link" href="turnos.html">Turnos</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="resultados.html">Busca tus resultados</a>
+		        <a class="nav-link" href="#">Busca tus resultados</a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link" href="contacto.html">Contacto</a>
