--- a/views/turnos.html
+++ b/views/turnos.html
@@ -35,16 +35,16 @@
 		        <a class="nav-link" href="nosotros.html">Nosotros</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">Servicios</a>
+		        <a class="nav-link" href="servicios.html">Servicios</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="turnos.html">Turnos</a>
+		        <a class="nav-link" href="#">Turnos</a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link" href="resultados.html">Busca tus resultados</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="contacto.html">Contacto</a>
+		        <a class="nav-link" href="#">Contacto</a>
 		      </li>
 		      
 		    </ul>
@@ -55,46 +55,37 @@
 </div>
 </header>
 <div class="container-fluid">
-	<div class="row align-items-center">
-		<div class="col-lg-8 col-12">
-			<div class="row">
-	<main class="main-servicios ">
-		<div class="col-lg-6 col-6">
-		<div class="col-lg-6 col-6">
-			
-	   			<h1>Nuestros servicios</h1>
-	        
-			    <P>En Imágenes, queremos brindarle una excelente calidad de atención,
-			 aplicando nuestros conocimientos y equipamientos de ultima tecnologia
-			  logrando asi los mejores resultados.</P>
-		</div>
-		</div>
-	</main>
-	</div>
-	</div>
-	<div class="col-lg-4 col-12">
-	         <ul>
-	         	 <li>ECOGRAFIA GENERAL </li>
-		         <li>ECOGRAFIA GINECOLÓGICA Y MAMARIA </li>
-		     	 <li>ECOGRAFIA FETAL Y DOPPLER FETO-PLACENTARIO </li>
-		     	 <li>ECOGRAFIA DE PARTES BLANDAS </li>
-		     	 <li>ECOGRAFIA PEDIATRICA </li>
-		     	 <li>DOPPLER VASCULAR </li>
-	         </ul>
-	</div>         
-	         
-  </div>
-</div>	         
-	<section class="container-fluid">
-		<div class="row">
-			<div class="col-lg-12 col-12">
-		<h2>ecografías de urgencia </h2>
-		  </div>
-		  <div class="col-lg-12 col-12">
-		<p>días sabados y domingos de 9 a 13 hs</p>
-			</div>
-		</div>
-	</section>
+<div  class="row">
+	<main  class="col-lg-6 col-12">
+	<div>
+		<h1>datos a tener para solicitar un turno</h1>
+	</div>	
+<div>
+	<ul>
+		<li>nombre y apellido</li>
+		<li>dni</li>
+		<li>fecha de nacimiento y direccion</li>
+		<li>telefono</li>
+		<li>correo electronico</li>
+		<li>foto pedido medico</li>
+	</ul>
+
+</div>
+</main>
+
+<div  class="col-lg-6 col-12">
+	<a href="https://api.whatsapp.com/send?phone=542615548444&text=Hola!+Necesito+pedir+un+turno."target="_blank"><img  src="https://icongr.am/fontawesome/whatsapp.svg?size=250&color=0077c8"></a> 
+</div>
+</div>
+</div>
+
+
+
+
+
+
+
+
 <footer class="container-fluid">
 			<div class="row align-items-center">
 			<div class="col-lg-12 col-12">
@@ -121,16 +112,16 @@
 		        <a class="nav-link" href="nosotros.html">Nosotros</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">Servicios</a>
+		        <a class="nav-link" href="servicios.html">Servicios</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="turnos.html">Turnos</a>
+		        <a class="nav-link" href="#">Turnos</a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link" href="resultados.html">Busca tus resultados</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="contacto.html">Contacto</a>
+		        <a class="nav-link" href="#">Contacto</a>
 		      </li>
 		      
 		    </ul>
