--- a/views/contacto.html
+++ b/views/contacto.html
@@ -35,7 +35,7 @@
 		        <a class="nav-link" href="nosotros.html">Nosotros</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">Servicios</a>
+		        <a class="nav-link" href="servicios.html">Servicios</a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link" href="turnos.html">Turnos</a>
@@ -44,7 +44,7 @@
 		        <a class="nav-link" href="resultados.html">Busca tus resultados</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="contacto.html">Contacto</a>
+		        <a class="nav-link" href="#">Contacto</a>
 		      </li>
 		      
 		    </ul>
@@ -54,47 +54,49 @@
 </div>
 </div>
 </header>
+<main>
 <div class="container-fluid">
-	<div class="row align-items-center">
-		<div class="col-lg-8 col-12">
-			<div class="row">
-	<main class="main-servicios ">
-		<div class="col-lg-6 col-6">
-		<div class="col-lg-6 col-6">
+	<div class="row">
+		<div class="col-lg-6 col-12">
+<form action="#">
+		
+			<h1 class="titulo-contacto">Envie su comentario.</h1>
+	
 			
-	   			<h1>Nuestros servicios</h1>
-	        
-			    <P>En Imágenes, queremos brindarle una excelente calidad de atención,
-			 aplicando nuestros conocimientos y equipamientos de ultima tecnologia
-			  logrando asi los mejores resultados.</P>
+		
+			<input type="text" name="nombre" placeholder="Nombre/s">     <input type="text" name="apellido" placeholder="Apellido/s"><br><br>
+			
+			<input type="tel" name="telefono" placeholder="Telefono">   <input type="email" name="email" placeholder="Email">
+			
+
+		
+
+		<div>
+		 <p> comentarios:</p>
 		</div>
+			
+				<textarea name="mensaje" id="mensaje" cols="50" rows="10"></textarea>
+			 
+		
+		<div>
+			<input type="submit" value="ENVIAR COMENTARIO">
 		</div>
-	</main>
-	</div>
-	</div>
-	<div class="col-lg-4 col-12">
-	         <ul>
-	         	 <li>ECOGRAFIA GENERAL </li>
-		         <li>ECOGRAFIA GINECOLÓGICA Y MAMARIA </li>
-		     	 <li>ECOGRAFIA FETAL Y DOPPLER FETO-PLACENTARIO </li>
-		     	 <li>ECOGRAFIA DE PARTES BLANDAS </li>
-		     	 <li>ECOGRAFIA PEDIATRICA </li>
-		     	 <li>DOPPLER VASCULAR </li>
-	         </ul>
-	</div>         
-	         
-  </div>
-</div>	         
-	<section class="container-fluid">
-		<div class="row">
-			<div class="col-lg-12 col-12">
-		<h2>ecografías de urgencia </h2>
-		  </div>
-		  <div class="col-lg-12 col-12">
-		<p>días sabados y domingos de 9 a 13 hs</p>
-			</div>
+		</form>
+		
 		</div>
-	</section>
+		<div class="col-lg-6 col-12">
+			<img src="../assets/img/imagenesbl.jpeg" alt="logo" width="80%">
+		</div>
+
+
+</div>
+</div>
+</main>
+
+
+
+
+
 <footer class="container-fluid">
 			<div class="row align-items-center">
 			<div class="col-lg-12 col-12">
@@ -121,7 +123,7 @@
 		        <a class="nav-link" href="nosotros.html">Nosotros</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">Servicios</a>
+		        <a class="nav-link" href="servicios.html">Servicios</a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link" href="turnos.html">Turnos</a>
@@ -130,7 +132,7 @@
 		        <a class="nav-link" href="resultados.html">Busca tus resultados</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="contacto.html">Contacto</a>
+		        <a class="nav-link" href="#">Contacto</a>
 		      </li>
 		      
 		    </ul>
