--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -38,13 +38,13 @@
 		        <a href="servicios.html">Servicios</a>
 		      </li>
 		      <li>
-		        <a href="#">Turnos</a>
+		        <a href="turnos.html">Turnos</a>
 		      </li>
 		      <li>
-		        <a href="#">Busca tus resultados</a>
+		        <a href="resultados.html">Busca tus resultados</a>
 		      </li>
 		      <li>
-		        <a href="#">Contacto</a>
+		        <a href="contacto.html">Contacto</a>
 		      </li>
 		      
 		    </ul>
@@ -55,7 +55,8 @@
 </div>
 </header>
 	<!-- img bg -->
-		<main class="container-fluid">
+	<div  class="container-fluid">
+		<main>
 			<div class="row imagenes">
 				<div class="col-lg-12 col-12">
 		        <div class="col-lg-6 col-6">
@@ -91,6 +92,7 @@ MP 11570</p>
 </div>
 </div>
 </div>
+</div>
 <footer class="container-fluid">
 			<div class="row align-items-center">
 			<div class="col-lg-12 col-12">
@@ -120,13 +122,13 @@ MP 11570</p>
 		        <a class="nav-link" href="servicios.html">Servicios</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">Turnos</a>
+		        <a class="nav-link" href="turnos.html">Turnos</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">Busca tus resultados</a>
+		        <a class="nav-link" href="resultados.html">Busca tus resultados</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">Contacto</a>
+		        <a class="nav-link" href="contacto.html">Contacto</a>
 		      </li>
 		      
 		    </ul>
