--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -60,7 +60,7 @@
 			<div class="row imagenes">
 				<div class="col-lg-12 col-12">
 		        <div class="col-lg-6 col-6">
-	   			<h3>IMÁGENES, Es un consultorio privado de ecografías en Mendoza, dirigido y atendido por la profesional Victoria Rovella Battocchia, Médica Esp. en diagnóstico por imágenes. 
+	   			<h3 class="texto-imagenes">IMÁGENES, Es un consultorio privado de ecografías en Mendoza, dirigido y atendido por la profesional Victoria Rovella Battocchia, Médica Esp. en diagnóstico por imágenes. 
 		Ubicado en Maipú, localidad de Mendoza, cuenta con equipamiento de última generación brindando así la capacidad de cubrir una vasta variedad de estudios ecográficos.</h3>
 		        </div>
 		         </div>
@@ -69,13 +69,13 @@
 
 	<div class="row">
 		<div class="col-lg-12 col-12">
-		<h1>Nuestro Staff</h1>
+		<h1 class="staff">Nuestro Staff</h1>
 		</div>
 	</div>
 	<div class="container-fluid">
 <div class="row align-items-center">
 	<div class="col-lg-6 col-12">
-	<img src="../assets/img/profesional.JPG" alt="medica">
+	<img class="imgstaff" src="../assets/img/profesional.JPG" alt="medica" width="80%">
     </div>
 <div class="col-lg-6 col-12 ">
 	<p>Mi nombre es Victoria Rovella Battocchia.
