correccion segunda pre entrega

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,9 @@ header {
 .navbar-collapse{
 	justify-content: flex-end;
 }
+body{
+	text-align: center;
+}
 
 a {
     text-decoration: none;
@@ -27,15 +30,44 @@ a:hover {
 li {
 	list-style: none;
 	margin: 10px;
-}    
-body{
-	text-align: center;
+}  
+
+.viñeta{
+	list-style: circle;
+	text-align: initial;
+	
+} 
+.titulo__principal{
+	color: #0e5487;
+	font-size: 50px;
+	text-shadow: 2px 1px #072e4a;
+	
+	
 }
+.titulo_servicios{
+ 	font-size: 40px;
+ 	color: #0e5487;
+ 	text-shadow: 2px 1px #072e4a;
+
+
+}
+.form-control{
+	border-radius: 1.5rem ;
+	margin: 10px;
+}
+button {
+	margin: 25px;
+	padding: 10px
+}
+
 footer {
 	background-image: linear-gradient(#e6e6e6,#b3b3b3,#808080,#4d4d4d);
 	padding-top: 5px;
 	font-size: large;
 	
+}
+.rrss{
+	margin: 20px;
 }
 
 .main-principal{
@@ -48,6 +80,7 @@ footer {
    margin-top: 25px;
    margin-bottom: 25px;	
     width: 100%;	
+    height: 350px;
 }
 @keyframes header {
   0% {
@@ -74,12 +107,13 @@ footer {
 
 }
 .main-servicios{
-  background-image: url(https://media.istockphoto.com/photos/ultrasound-examination-in-doctors-office-picture-id614051978?k=20&m=614051978&s=612x612&w=0&h=c4CIqN82F0itjV-bBI-zOb1KMOyQ6s597S9YOxbBgQ8=);
+  background-image: url(https://media.istockphoto.com/photos/ultrasound-medical-device-for-diagnostics-picture-id178438513?b=1&k=20&m=178438513&s=170667a&w=0&h=A8xlbktwwb1FWsGi6oJ8P0A67I14CeSSBXHYw3r-7jw=);
   background-position: center	;
   background-repeat: no-repeat;
   background-size: 100% 100%;
   text-align: -webkit-right
 }
+
 .resultados{
 	background-image: url(https://media.istockphoto.com/photos/accessible-information-is-crucial-for-current-medical-research-picture-id1287845968?b=1&k=20&m=1287845968&s=170667a&w=0&h=B3ucd3Y_G2SqLgz1wjKtEUY6brC0gRAx1bQUypz8nmc=) ;
 	background-repeat: no-repeat;
@@ -100,14 +134,134 @@ footer {
 .imgstaff{
 	margin: 25px;
 }
+textarea {
+  width: 100%;
+  height: 150px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  font-size: 16px;
+  resize: none;
+}
+.form-control{
+	width: 40%;
+	display: inline-flex;
+}
 
 
-/* DESKTOP*/
-@media (max-width: 1200px) { 
-	/*uso bg solo para guiarme en los tamaños despues se quitan*/
-body {
-	background-color: red;
+
+
+/*mobile*/
+@media only screen and (max-width: 320px){
+	
+
+header {
+	font-size: small;
+
+}
+footer {
+	font-size: small;
+}
+
+.titulo__principal{
+	color: #0e5487;
+	font-size: 35px;
+	text-shadow: 2px 1px #072e4a;
+	
+	
+}
+.main-principal{
+	padding-top: 175px;
+	}
+.subtitulo-index {
+	font-size: 30px;
+	color: #0e5487;
+	text-shadow: 2px 1px #072e4a;
+}
+.texto-imagenes{
+	font-size: 12px;
+}
+.staff{ 
+   color: #0e5487;
+	 font-size: 30px;
+	 text-shadow: 2px 1px #072e4a;
+	 
+	justify-content: center;
+	;
+}
+.rrss{
+	margin: 10px;
+}
+.titulo_servicios{
+ 	font-size: 25px;
+
+ }
+.parrafo-servicios{
+font-size: 15px;
+}
+.resultados{
+	padding: 50px;
+}
+
+}
+
+
+
+/*medium*/
+@media only screen and (max-width: 600px) and (min-width: 320px){ 
+
+header {
+	font-size: small;
+
+}
+footer {
+	font-size: small;
+}
+
+.video{
+	width: 50%;
 } 
+.titulo__principal{
+	color: #0e5487;
+	font-size: 35px;
+	text-shadow: 2px 1px #072e4a;
+	
+}
+.texto-imagenes{
+	font-size: 15px;
+}
+.main-principal{
+	padding-top: 170px;
+	}
+.subtitulo-index {
+	font-size: 35px;
+	color: #0e5487;
+	text-shadow: 2px 1px #072e4a;
+}
+.titulo_servicios{
+ 	font-size: 30px;
+
+ }
+
+.rrss{
+	margin: 10px;
+}
+
+.staff{ 
+   color: #0e5487;
+	 font-size: 40px;
+	 text-shadow: 2px 1px #072e4a;
+	 
+	justify-content: center;
+	;
+}
+}
+/* DESKTOP*/
+@media only screen and (min-width: 992px) {
+background-color: green; 
+
 .titulo__principal{
 	color: #0e5487;
 	font-size: 50px;
@@ -131,78 +285,8 @@ body {
 	justify-content: center;
 	;
 }
+.main-servicios{
+  font-size: 29px;
+}
     
-}
-/*medium*/
-@media (max-width: 992px) { 
-	/*uso bg solo para guiarme en los tamaños despues se quitan*/
-body{
-	background-color: yellow;
-	
-}	
-.video{
-	width: 50%;
-} 
-.titulo__principal{
-	color: #0e5487;
-	font-size: 45px;
-	text-shadow: 2px 1px #072e4a;
-	
-	
-}
-.subtitulo-index {
-	font-size: 35px;
-	color: #0e5487;
-	text-shadow: 2px 1px #072e4a;
-}
-.texto-imagenes{
-	font-size: 24px;
-}
-.staff{ 
-   color: #0e5487;
-	 font-size: 40px;
-	 text-shadow: 2px 1px #072e4a;
-	 
-	justify-content: center;
-	;
-}
-}
-/*mobile*/
-@media (max-width: 551px) {
-/*uso bg solo para guiarme en los tamaños despues se quitan*/ 
-	body {
-		background-color: green;
-	}
-header {
-	font-size: small;
-
-}
-footer {
-	font-size: small;
-}
-
-.titulo__principal{
-	color: #0e5487;
-	font-size: 35px;
-	text-shadow: 2px 1px #072e4a;
-	
-	
-}
-.subtitulo-index {
-	font-size: 30px;
-	color: #0e5487;
-	text-shadow: 2px 1px #072e4a;
-}
-.texto-imagenes{
-	font-size: 20px;
-}
-.staff{ 
-   color: #0e5487;
-	 font-size: 30px;
-	 text-shadow: 2px 1px #072e4a;
-	 
-	justify-content: center;
-	;
-}
- 
 }
