--- a/views/servicios.html
+++ b/views/servicios.html
@@ -15,12 +15,12 @@
 </head>
 <body>
 	<!-- logo y nav -->
-	<header class="container-fluid"> 
+<header class="container-fluid">
 		<div class="row">
 		<div class="col-lg-12 col-12">
 	<nav class="navbar navbar-expand-lg navbar-light">
 		
-  <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo.png" alt="logo de la empresa" width="100%"></a>
+  <a class="navbar-brand" href="#"><img src="../assets/img/logo.png" alt="logo de la empresa" width="100%"></a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -29,22 +29,22 @@
   		<div class="collapse navbar-collapse" id="navbarNav">
 		    <ul class="navbar-nav ">
 		      <li class="nav-item active">
-		        <a class="nav-link" href="../index.html">Inicio <span class="sr-only"></span></a>
+		        <a href="../index.html">Inicio <span class="sr-only"></span></a>
 		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="nosotros.html">Nosotros</a>
+		      <li>
+		        <a href="nosotros.html">Nosotros</a>
 		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#">Servicios</a>
+		      <li>
+		        <a href="#">Servicios</a>
 		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="turnos.html">Turnos</a>
+		      <li>
+		        <a href="turnos.html">Turnos</a>
 		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="resultados.html">Busca tus resultados</a>
+		      <li>
+		        <a href="resultados.html">Busca tus resultados</a>
 		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="contacto.html">Contacto</a>
+		      <li>
+		        <a href="contacto.html">Contacto</a>
 		      </li>
 		      
 		    </ul>
@@ -60,27 +60,27 @@
 			<div class="row">
 	<main class="main-servicios ">
 		<div class="col-lg-6 col-6">
-		<div class="col-lg-6 col-6">
+		
 			
-	   			<h1>Nuestros servicios</h1>
+	   			<h1 class="titulo_servicios">Nuestros servicios</h1>
 	        
-			    <P>En Imágenes, queremos brindarle una excelente calidad de atención,
+			    <P class="parrafo-servicios">En Imágenes, queremos brindarle una excelente calidad de atención,
 			 aplicando nuestros conocimientos y equipamientos de ultima tecnologia
 			  logrando asi los mejores resultados.</P>
-		</div>
+		
 		</div>
 	</main>
 	</div>
 	</div>
 	<div class="col-lg-4 col-12">
-	         <ul>
-	         	 <li>ECOGRAFIA GENERAL </li>
-		         <li>ECOGRAFIA GINECOLÓGICA Y MAMARIA </li>
-		     	 <li>ECOGRAFIA FETAL Y DOPPLER FETO-PLACENTARIO </li>
-		     	 <li>ECOGRAFIA DE PARTES BLANDAS </li>
-		     	 <li>ECOGRAFIA PEDIATRICA </li>
-		     	 <li>DOPPLER VASCULAR </li>
-	         </ul>
+	         <ol>
+	         	 <li class="viñeta">ECOGRAFIA GENERAL </li>
+		         <li class="viñeta">ECOGRAFIA GINECOLÓGICA Y MAMARIA </li>
+		     	   <li class="viñeta">ECOGRAFIA FETAL Y DOPPLER FETO-PLACENTARIO </li>
+		     		 <li class="viñeta">ECOGRAFIA DE PARTES BLANDAS </li>
+		     		 <li class="viñeta">ECOGRAFIA PEDIATRICA </li>
+		     	 	 <li class="viñeta">DOPPLER VASCULAR </li>
+	         </ol>
 	</div>         
 	         
   </div>
@@ -97,63 +97,30 @@
 	</section>
 <footer class="container-fluid">
 			<div class="row align-items-center">
-			<div class="col-lg-12 col-12">
-			<a href="../index.html"><img src="../assets/img/logo.png" alt="logo de la empresa" width="50%"> </a>
-				
+			<div class="col-lg-6 col-12">
+			<a href="#"><img src="../assets/img/logo.png" alt="logo de la empresa" width="80%"> </a>
+				<p>&copy;2022 imagenes</p>
 		</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-6 col-2">
-<nav class="navbar navbar-expand-lg navbar-light">
+
+	
 		
-  
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  
-  
-  		<div class="collapse navbar-collapse" id="navbarNav">
-		    <ul class="navbar-nav ">
-		      <li class="nav-item active">
-		        <a class="nav-link" href="../index.html">Inicio <span class="sr-only"></span></a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="nosotros.html">Nosotros</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#">Servicios</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="turnos.html">Turnos</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="resultados.html">Busca tus resultados</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="contacto.html">Contacto</a>
-		      </li>
-		      
-		    </ul>
- 		 </div>
- 
-</nav>
-</div>
 		
-			<div class="col-lg-6 col-10">
+			<div class="col-lg-6 col-12">
 				<div>
 					<h4>Contacto y Ubicación</h4>
 				</div>
 					<nav>
-						<a href="https://goo.gl/maps/MjDPdWDc2KxhJyFs6"target="_blank"><img src="https://icongr.am/feather/map-pin.svg?color=0077c8"></a>
-						<a href="https://www.instagram.com/imagenesmedicasmza/"target="_blank"><img src="https://icongr.am/fontawesome/instagram.svg?color=0077c8"></a>
-			            <a href="https://api.whatsapp.com/send?phone=542615548444&text=Hola!+Necesito+pedir+un+turno."target="_blank"><img src="https://icongr.am/simple/whatsapp.svg?color=0077c8"></a>
-						<a href="mailto:imacentersas@gmail.com"target="_blank"><img src="https://icongr.am/clarity/email.svg?color=0077c8"></a>
+						<a href="https://goo.gl/maps/MjDPdWDc2KxhJyFs6"target="_blank"><img class="rrss" src="https://icongr.am/feather/map-pin.svg?color=0077c8"></a>
+						<a href="https://www.instagram.com/imagenesmedicasmza/"target="_blank"><img class="rrss" src="https://icongr.am/fontawesome/instagram.svg?color=0077c8"></a>
+			            <a href="https://api.whatsapp.com/send?phone=542615548444&text=Hola!+Necesito+pedir+un+turno."target="_blank"><img class="rrss" src="https://icongr.am/simple/whatsapp.svg?color=0077c8"></a>
+						<a href="mailto:imacentersas@gmail.com"target="_blank"><img class="rrss" src="https://icongr.am/clarity/email.svg?color=0077c8"></a>
 					</nav>
 			
 		</div>	
 
 
 </div>
+
 		</footer>
 		 <script src="js/wow.min.js"></script>
       <script>new WOW().init();</script>
