--- a/views/resultados.html
+++ b/views/resultados.html
@@ -15,12 +15,12 @@
 </head>
 <body>
 	<!-- logo y nav -->
-	<header class="container-fluid"> 
+<header class="container-fluid">
 		<div class="row">
 		<div class="col-lg-12 col-12">
 	<nav class="navbar navbar-expand-lg navbar-light">
 		
-  <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo.png" alt="logo de la empresa" width="100%"></a>
+  <a class="navbar-brand" href="#"><img src="../assets/img/logo.png" alt="logo de la empresa" width="100%"></a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -29,22 +29,22 @@
   		<div class="collapse navbar-collapse" id="navbarNav">
 		    <ul class="navbar-nav ">
 		      <li class="nav-item active">
-		        <a class="nav-link" href="../index.html">Inicio <span class="sr-only"></span></a>
+		        <a href="../index.html">Inicio <span class="sr-only"></span></a>
 		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="nosotros.html">Nosotros</a>
+		      <li>
+		        <a href="nosotros.html">Nosotros</a>
 		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="servicios.html">Servicios</a>
+		      <li>
+		        <a href="servicios.html">Servicios</a>
 		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="turnos.html">Turnos</a>
+		      <li>
+		        <a href="turnos.html">Turnos</a>
 		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#">Busca tus resultados</a>
+		      <li>
+		        <a href="#">Busca tus resultados</a>
 		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="contacto.html">Contacto</a>
+		      <li>
+		        <a href="contacto.html">Contacto</a>
 		      </li>
 		      
 		    </ul>
@@ -61,10 +61,15 @@
 				
 					<form action="#">  
 						             <h1>Busca tu resultado</h1>
-						 <input type="number" name="Numero de estudio" placeholder="Nº de estudio">
-				    	 <input  class="formulario" type="number" name="DNI" placeholder="DNI paciente">
-					<div>	
-						 <input  type="submit" value="BUSCAR">
+						 <div>            
+						  <label for="number" class="form-label">estudio</label>
+						  <input  type="number" name="Numero de estudio" placeholder="Nº de estudio">
+						 
+						  <label for="number" class="form-label">DNI</label>
+  				    <input  class="formulario" type="number" name="DNI" placeholder="DNI paciente">
+             </div>
+							<div>	
+						 		<button ><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16"><path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/></svg> Buscar</button>
 			        </div>
           </form>
     </div>      
@@ -80,63 +85,30 @@
 
 <footer class="container-fluid">
 			<div class="row align-items-center">
-			<div class="col-lg-12 col-12">
-			<a href="../index.html"><img src="../assets/img/logo.png" alt="logo de la empresa" width="50%"> </a>
-				
+			<div class="col-lg-6 col-12">
+			<a href="#"><img src="../assets/img/logo.png" alt="logo de la empresa" width="80%"> </a>
+				<p>&copy;2022 imagenes</p>
 		</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-6 col-2">
-<nav class="navbar navbar-expand-lg navbar-light">
+
+	
 		
-  
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  
-  
-  		<div class="collapse navbar-collapse" id="navbarNav">
-		    <ul class="navbar-nav ">
-		      <li class="nav-item active">
-		        <a class="nav-link" href="../index.html">Inicio <span class="sr-only"></span></a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="nosotros.html">Nosotros</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="servicios.html">Servicios</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="turnos.html">Turnos</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#">Busca tus resultados</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="contacto.html">Contacto</a>
-		      </li>
-		      
-		    </ul>
- 		 </div>
- 
-</nav>
-</div>
 		
-			<div class="col-lg-6 col-10">
+			<div class="col-lg-6 col-12">
 				<div>
 					<h4>Contacto y Ubicación</h4>
 				</div>
 					<nav>
-						<a href="https://goo.gl/maps/MjDPdWDc2KxhJyFs6"target="_blank"><img src="https://icongr.am/feather/map-pin.svg?color=0077c8"></a>
-						<a href="https://www.instagram.com/imagenesmedicasmza/"target="_blank"><img src="https://icongr.am/fontawesome/instagram.svg?color=0077c8"></a>
-			            <a href="https://api.whatsapp.com/send?phone=542615548444&text=Hola!+Necesito+pedir+un+turno."target="_blank"><img src="https://icongr.am/simple/whatsapp.svg?color=0077c8"></a>
-						<a href="mailto:imacentersas@gmail.com"target="_blank"><img src="https://icongr.am/clarity/email.svg?color=0077c8"></a>
+						<a href="https://goo.gl/maps/MjDPdWDc2KxhJyFs6"target="_blank"><img class="rrss" src="https://icongr.am/feather/map-pin.svg?color=0077c8"></a>
+						<a href="https://www.instagram.com/imagenesmedicasmza/"target="_blank"><img class="rrss" src="https://icongr.am/fontawesome/instagram.svg?color=0077c8"></a>
+			            <a href="https://api.whatsapp.com/send?phone=542615548444&text=Hola!+Necesito+pedir+un+turno."target="_blank"><img class="rrss" src="https://icongr.am/simple/whatsapp.svg?color=0077c8"></a>
+						<a href="mailto:imacentersas@gmail.com"target="_blank"><img class="rrss" src="https://icongr.am/clarity/email.svg?color=0077c8"></a>
 					</nav>
 			
 		</div>	
 
 
 </div>
+
 		</footer>
 		 <script src="js/wow.min.js"></script>
       <script>new WOW().init();</script>
