--- a/views/turnos.html
+++ b/views/turnos.html
@@ -11,16 +11,17 @@
 	  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  
     <link rel="stylesheet"  href="../css/style.css">
 </head>
-<body>
+<body> 
 	<!-- logo y nav -->
-	<header class="container-fluid"> 
+<header class="container-fluid">
 		<div class="row">
 		<div class="col-lg-12 col-12">
 	<nav class="navbar navbar-expand-lg navbar-light">
 		
-  <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo.png" alt="logo de la empresa" width="100%"></a>
+  <a class="navbar-brand" href="#"><img src="../assets/img/logo.png" alt="logo de la empresa" width="100%"></a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -29,22 +30,22 @@
   		<div class="collapse navbar-collapse" id="navbarNav">
 		    <ul class="navbar-nav ">
 		      <li class="nav-item active">
-		        <a class="nav-link" href="../index.html">Inicio <span class="sr-only"></span></a>
+		        <a href="../index.html">Inicio <span class="sr-only"></span></a>
 		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="nosotros.html">Nosotros</a>
+		      <li>
+		        <a href="nosotros.html">Nosotros</a>
 		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="servicios.html">Servicios</a>
+		      <li>
+		        <a href="servicios.html">Servicios</a>
 		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#">Turnos</a>
+		      <li>
+		        <a href="#">Turnos</a>
 		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="resultados.html">Busca tus resultados</a>
+		      <li>
+		        <a href="resultados.html">Busca tus resultados</a>
 		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#">Contacto</a>
+		      <li>
+		        <a href="contacto.html">Contacto</a>
 		      </li>
 		      
 		    </ul>
@@ -54,30 +55,55 @@
 </div>
 </div>
 </header>
-<div class="container-fluid">
+<div class="container">
 <div  class="row">
-	<main  class="col-lg-6 col-12">
+	<main  class="col-lg-12 col-12">
 	<div>
-		<h1>datos a tener para solicitar un turno</h1>
-	</div>	
-<div>
-	<ul>
-		<li>nombre y apellido</li>
-		<li>dni</li>
-		<li>fecha de nacimiento y direccion</li>
-		<li>telefono</li>
-		<li>correo electronico</li>
-		<li>foto pedido medico</li>
-	</ul>
-
+		<h1>datos para solicitar un turno</h1>
+	</div>
+	<form>
+  <div class="row">
+    <div class="col">
+      <input type="text" class="form-control form-control-lg" placeholder="Nombre">
+    </div>
+    <div class="col">
+      <input type="text" class="form-control form-control-lg" placeholder="Apellido">
+    </div>
+    </div>
+    <div class="row">
+    <div class="col">
+      <input type="number" class="form-control form-control-lg" placeholder="DNI">
+    </div>
+      <div class="col">
+      <input type="number" class="form-control form-control-lg" placeholder="telefono">
+    </div>
+       </div>
+       <div class="row">
+    <div class="col">
+      <input type="text" class="form-control form-control-lg" placeholder="Direccion">
+    </div>
+  </div>
+  <div class="row">
+  <div class="mb-3">
+  <label for="formFile" class="form-label">foto del pedido medico</label>
+  <input class="form-control" type="file" id="formFile">
 </div>
+</div>
+
+</form>	
+<button type="button" class="btn btn-primary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-event" viewBox="0 0 16 16">
+  <path d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1z"/>
+  <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
+</svg>  solicitar turno</button>
 </main>
 
-<div  class="col-lg-6 col-12">
-	<a href="https://api.whatsapp.com/send?phone=542615548444&text=Hola!+Necesito+pedir+un+turno."target="_blank"><img  src="https://icongr.am/fontawesome/whatsapp.svg?size=250&color=0077c8"></a> 
+	
+
+
+
 </div>
 </div>
-</div>
+
 
 
 
@@ -88,66 +114,34 @@
 
 <footer class="container-fluid">
 			<div class="row align-items-center">
-			<div class="col-lg-12 col-12">
-			<a href="../index.html"><img src="../assets/img/logo.png" alt="logo de la empresa" width="50%"> </a>
-				
+			<div class="col-lg-6 col-12">
+			<a href="#"><img src="../assets/img/logo.png" alt="logo de la empresa" width="80%"> </a>
+				<p>&copy;2022 imagenes</p>
 		</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-6 col-2">
-<nav class="navbar navbar-expand-lg navbar-light">
+
+	
 		
-  
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  
-  
-  		<div class="collapse navbar-collapse" id="navbarNav">
-		    <ul class="navbar-nav ">
-		      <li class="nav-item active">
-		        <a class="nav-link" href="../index.html">Inicio <span class="sr-only"></span></a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="nosotros.html">Nosotros</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="servicios.html">Servicios</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#">Turnos</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="resultados.html">Busca tus resultados</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#">Contacto</a>
-		      </li>
-		      
-		    </ul>
- 		 </div>
- 
-</nav>
-</div>
 		
-			<div class="col-lg-6 col-10">
+			<div class="col-lg-6 col-12">
 				<div>
 					<h4>Contacto y Ubicación</h4>
 				</div>
 					<nav>
-						<a href="https://goo.gl/maps/MjDPdWDc2KxhJyFs6"target="_blank"><img src="https://icongr.am/feather/map-pin.svg?color=0077c8"></a>
-						<a href="https://www.instagram.com/imagenesmedicasmza/"target="_blank"><img src="https://icongr.am/fontawesome/instagram.svg?color=0077c8"></a>
-			            <a href="https://api.whatsapp.com/send?phone=542615548444&text=Hola!+Necesito+pedir+un+turno."target="_blank"><img src="https://icongr.am/simple/whatsapp.svg?color=0077c8"></a>
-						<a href="mailto:imacentersas@gmail.com"target="_blank"><img src="https://icongr.am/clarity/email.svg?color=0077c8"></a>
+						<a href="https://goo.gl/maps/MjDPdWDc2KxhJyFs6"target="_blank"><img class="rrss" src="https://icongr.am/feather/map-pin.svg?color=0077c8"></a>
+						<a href="https://www.instagram.com/imagenesmedicasmza/"target="_blank"><img class="rrss" src="https://icongr.am/fontawesome/instagram.svg?color=0077c8"></a>
+			            <a href="https://api.whatsapp.com/send?phone=542615548444&text=Hola!+Necesito+pedir+un+turno."target="_blank"><img class="rrss" src="https://icongr.am/simple/whatsapp.svg?color=0077c8"></a>
+						<a href="mailto:imacentersas@gmail.com"target="_blank"><img class="rrss" src="https://icongr.am/clarity/email.svg?color=0077c8"></a>
 					</nav>
 			
 		</div>	
 
 
 </div>
+
 		</footer>
 		 <script src="js/wow.min.js"></script>
       <script>new WOW().init();</script>
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+			
 </body>
 </html>
